--- a/cilium-srv6/cilium-bgp-peering-policy.yaml
+++ b/cilium-srv6/cilium-bgp-peering-policy.yaml
@@ -10,9 +10,9 @@ spec:
       kubernetes.io/hostname: node1
   virtualRouters:
   # Peer with XR and advertise Pod CIDR
-  - localASN: 67000
+  - localASN: 65000
     exportPodCIDR: true
     mapSRv6VRFs: true
     neighbors:
-    - peerAddress: "10.13.10.1"
+    - peerAddress: "10.12.10.1/32"
       peerASN: 66000
